--- a/CSS/style.css
+++ b/CSS/style.css
@@ -35,7 +35,7 @@ body {
   font-family: 'Libre Baskerville', serif;
 }
 
-hr{
+.textbox hr{
   width: 60%;
   border-top: 1px solid whitesmoke; /*valamitől fekete lesz*/
 }
@@ -63,23 +63,23 @@ hr{
 }
 
 .modul-b{
-  background-color: #606060;
+  background-color: hsla(0, 0.0%, 37.6%, 0.9);
   color: #d2ba87;
 }
 
 .modul-title{
   font-family: 'Great Vibes', cursive;
-  font-size: 3rem;  
+  font-size: 2.8rem;  
   padding: 1rem;
 }
 
-.card-holder{
-  display: inline-block;
-}
-
 .card{
+  width: 70vw;
   background: unset;
-  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  border: 0px;
+  margin: 1rem auto;
 }
 
 .card-title{
@@ -89,18 +89,23 @@ hr{
 }
 
 .card-img{
-  width: 8rem;
-  margin: 2rem auto;
+  width: 7rem;
+  margin: 1.2rem auto;
+  margin-bottom: 2.5rem;
 }
+
+.card hr{
+  width: 40%;
+  margin: 0px auto;
+  margin-top: 1rem;
+  border: 2px solid #606060; /*valamitől fekete lesz*/
+}
+
 
 
 /* Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) {
   
-  .textbox{
-    width: 50vw; 
-    height: auto;
-  }
 }*/
 
 /* Medium devices (tablets, 768px and up)*/
@@ -126,10 +131,19 @@ hr{
       width: 30vw;
       border: 0px;
     }
+
+    .card hr{
+        border: 0px;
+    }
 }
 
 /* Large devices (desktops, 992px and up)*/
 @media (min-width: 992px) {
+
+  .textbox{
+    width: 50vw; 
+    height: auto;
+  }
 
 }
 
